add service worker for PWA

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,19 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>SpaceXMissions</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+    <head>
+        <meta charset="utf-8">
+        <title>SpaceX Missions</title>
+        <base href="/">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="icon" type="image/x-icon" href="favicon.ico">
+        <link rel="manifest" href="manifest.webmanifest">
+        <link rel="apple-touch-icon" href="asset/apple-touch-icon.png">
+        <meta name="theme-color" content="#1976d2">
+    </head>
+    <body>
+        <app-root></app-root>
+        <noscript>
+            You do not have JS enabled.  Since this is an Angular based website, it won't do jack for you :-)
+        </noscript>
+    </body>
 </html>
